# CSE201-VCREST-

./: .gitignore  CMakeLists.txt  README.md  application.qrc  main.cpp
doc/: project_design.md
libs/aubio/include/aubio/pitch/: pitch.h
libs/lame/include/: lame.h
libs/opencv/: CMakeLists.txt
libs/qt/: CMakeLists.txt
media/imgsVCREST/: README.md
src/: CMakeLists.txt  README.md  audio.cpp  export.cpp  image.cpp  import.cpp  menu.cpp  setup.cpp  videoeditor.cpp  videoeditor.h  videoeditor.ui
src/Audio/: Audio.cpp  Audio.hpp  sampl.md
src/Image/: CMakeLists.txt  blur.cpp  blurs.cpp  image.cpp  image.h  rotate.cpp  rotate_resize.cpp  sample.md  save.cpp  video.h
src/Image/test_image_class/: test_image.cpp
src/Video/: CMakeLists.txt  sampl.md  test_video.cpp  video.cpp  video.h  video_animations.hpp
src/audio/: Audio.cpp  Audio.hpp  CMakeLists.txt  audioo.cpp  lameHelper.cpp  lameHelper.hpp
src/audio/aubio/: CMakeLists.txt  aubio_priv.h
src/audio/aubio/src/io/: source.c  source_wavread.c
src/audio/aubio/src/utils/: log.c
src/audio/lame/: CMakeLists.txt
src/audio/lame/ACM/: ACM.cpp  ACM.h  ACMStream.cpp  ACMStream.h  AEncodeProperties.cpp  AEncodeProperties.h  DecodeStream.cpp  DecodeStream.h  adebug.h  lame_acm.xml  main.cpp
src/audio/lame/ACM/ADbg/: ADbg.cpp  ADbg.h
src/audio/lame/ACM/ddk/: msacmdrv.h
src/audio/lame/ACM/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
src/audio/lame/Dll/: BladeMP3EncDLL.c  BladeMP3EncDLL.h  CMakeLists.txt  Example.cpp  LameDLLInterface.htm
src/audio/lame/doc/html/: about.html  abr.html  cbr.html  contact.html  contributors.html  detailed.html  history.html  index.html  introduction.html  links.html  list.html  ms_stereo.html  usage.html  vbr.html
src/audio/lame/dshow/: Encoder.cpp  Encoder.h  Mpegac.cpp  Mpegac.h  PropPage.cpp  PropPage.h  PropPage_adv.cpp  PropPage_adv.h  REG.CPP  REG.H  aboutprp.cpp  aboutprp.h  iaudioprops.h
src/audio/lame/frontend/: brhist.c  brhist.h  console.c  console.h  gtkanal.c  gtkanal.h  lametime.c  main.c  main.h  mp3rtp.c  mp3x.c  parse.c  parse.h  rtp.c  rtp.h
src/audio/lame/include/: lame.h
src/audio/lame/mac/: LAME_Carbon_Debug.pch  LAME_Carbon_Final.pch  LAME_Classic_Debug.pch  LAME_Classic_Final.pch  MacDLLMain.c  Precompile_Common.h
src/audio/lame/misc/: abx.c  ath.c  auenc  lameGUI.html  mlame  mlame_corr.c  scalartest.c
src/audio/lame/mpglib/: common.c  common.h  dct64_i386.c  dct64_i386.h  decode_i386.c  decode_i386.h  huffman.h  interface.c  interface.h  l2tables.h  layer1.c  layer1.h  layer2.c  layer2.h  layer3.c  layer3.h  mpg123.h  mpglib.h  tabinit.c  tabinit.h
src/audiomanager/: audiomanager.cpp
src/export/: CMakeLists.txt  export.cpp  export.h
src/export/test_ffmpeg/: CMakeLists.txt  export.cpp  test_merge.cpp  test_merge.h
src/export/test_ffmpeg/test_files/: output.mkv  output_1.mkv
src/export/test_files/: export.h  output.mkv
src/gui/: CMakeLists.txt  README.md  videoeditor.cpp  videoeditor.h  videoeditor.ui
src/gui/audioitem/: CMakeLists.txt  audioitem.cpp  audioitem.h  audioresizer.h
src/gui/audiomanager/: CMakeLists.txt  audiomanager.cpp  audiomanager.h
src/gui/audioplayer/: CMakeLists.txt  audioplayer.cpp  audioplayer.h
src/gui/imageitem/: CMakeLists.txt  imageitem.cpp  imageitem.h  imageitemmenu.cpp  imageitemmenu.h  imageresizer.cpp  resizer.cpp  resizer.h
src/gui/imageitemmenu/: CMakeLists.txt  imageitemmenu.cpp  imageitemmenu.h
src/gui/imagemanager/: CMakeLists.txt  imagemanager.cpp  imagemanager.h
src/gui/imagethumbnail/: CMakeLists.txt  imagethumbnail.cpp  imagethumbnail.h  temp.cpp  temp.h  temp.ui
src/gui/imglist/: CMakeLists.txt  imglist.cpp  imglist.h
src/gui/indicator/: CMakeLists.txt  indicator.cpp  indicator.h
src/gui/progressbar/: CMakeLists.txt  progressbar.cpp  progressbar.h
src/gui/sizegripitem/: CMakeLists.txt  sizegripitem.cpp  sizegripitem.h
src/gui/timeline/: CMakeLists.txt  audio.cpp  image.cpp  timeline.cpp  timeline.h
src/gui/timeline/indicator/: indicator.cpp
src/gui/timeline/items/: CMakeLists.txt
src/gui/timeline/items/audioitem/: CMakeLists.txt  audioitem.cpp  audioitem.h  audioresizer.cpp
src/gui/timeline/items/imageitem/: imageitem.cpp  imageitem.h  imageitemmenu.cpp  imageitemmenu.h  imageresizer.h
src/gui/timeline/items/sizegripitem/: CMakeLists.txt
src/gui/videoplayer/: CMakeLists.txt  videoplayer.cpp  videoplayer.h  videowindow.cpp
src/gui/videowindow/: CMakeLists.txt  videowindow.cpp  videowindow.h
src/image/: CMakeLists.txt  FindOpenCV.cmake  README.md  blurs.cpp  collage.cpp  collage.h  image.cpp  image.h  rotate_resize.cpp
src/image/collage/: CMakeLists.txt  collage.cpp  collage.h  readme.md
src/image/test_image_class/: CMakeLists.txt  test_image.cpp
src/imagethumbnail/: CMakeLists.txt  imagethumbnail.cpp
src/testing_opencv/: test.cpp
src/video/: CMakeLists.txt  test_video.cpp  video.cpp  video.h  video_animations.cpp
src/videoplayer/: CMakeLists.txt  videoplayer.cpp  videowindow.cpp  videowindow.h
test_opencv/: CMakeLists.txt  README.md  test.cpp
